--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -49,7 +49,8 @@ label {
 }
 
 input[type="text"],
-input[type="email"] {
+input[type="email"], 
+input[type="file"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
