--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -23,6 +23,31 @@
             <a class="nav-link" href="/add_user">Add User</a>
           </li>
         </ul>
+        <% if(locals.user) {%>
+        <div class="d-flex">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <%= user.username %>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/logout">logout</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <% }else{ %>
+          <div class="d-flex">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/login">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/signup">Sign Up</a>
+              </li>
+            </ul>
+          </div>
+        <% } %>
       </div>
     </div>
   </nav>
